# snarkVM

./: Cargo.toml
algorithms/: Cargo.toml
algorithms/src/msm/variable_base/: cuda.rs
algorithms/src/msm/variable_base/blst_377_cuda/: asm_cuda.debug.ptx  asm_cuda.release.ptx  blst_377_ops.debug.ptx  blst_377_ops.release.ptx  build.sh  msm.debug.ptx  msm.fatbin  msm.release.ptx  test.fatbin  tests.debug.ptx
algorithms/src/polycommit/sonic_pc/: mod.rs
algorithms/src/snark/marlin/: marlin.rs
algorithms/src/snark/marlin/ahp/prover/round_functions/: first.rs
apps/: Cargo.toml  build
apps/src/: main.rs
dpc/src/posw/: posw.rs
