[package]
name = "posw-marlin"
version = "0.7.5"
edition = "2018"

[[bin]]
name = "posw-marlin"
path = "src/main.rs"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-dpc]
path = "../dpc"
version = "0.7.5"
default-features = false

[dependencies.curl]
version = "0.4.43"

[dependencies.snarkvm-parameters]
path = "../parameters"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-gadgets]
path = "../gadgets"
version = "0.7.5"
default-features = false

[dependencies.rand]
version = "0.8"

[features]
testnet2 = [
  "snarkvm-dpc/default",
  "snarkvm-parameters/default",
  "snarkvm-algorithms/default",
  "snarkvm-utilities/default",
  "snarkvm-gadgets/default"
]
